[gd_scene load_steps=4 format=3 uid="uid://bx317xb5h7grw"]

[ext_resource type="Script" path="res://scripts/projectil_ball.gd" id="1_10ivq"]
[ext_resource type="Texture2D" uid="uid://cpconbgcr4jgr" path="res://sprites/pixelart/ball_alone.png" id="2_imrcq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bsp7e"]
radius = 6.0

[node name="ProjectileBall" type="CharacterBody2D"]
script = ExtResource("1_10ivq")

[node name="sprite_projectile" type="Sprite2D" parent="."]
texture = ExtResource("2_imrcq")

[node name="CoolDown" type="Timer" parent="."]
wait_time = 4.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_bsp7e")
disabled = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_bsp7e")

[connection signal="timeout" from="CoolDown" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
